--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@ tw-sidebar tw-icon.undo {
 
 tw-sidebar{
 	visibility: hidden
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="1cipris" tags="" position="37,2.5" size="100,100">(t8n-depart:&quot;flicker&quot;)+(t8n-arrive:&quot;flicker&quot;)+(t8n-time:1.8s)[[cipris-&gt;cipris]]
-</tw-passagedata><tw-passagedata pid="2" name="here" tags="" position="0,244.5" size="100,100">(dialog: &quot;Hello, I am CXL. The AI that will be screening you. What is your name?&quot;, &#39;My name...&#39;)
-(goto: &#39;My name...&#39;)</tw-passagedata><tw-passagedata pid="3" name="Standard Agreement.pdf" tags="" position="111,235.5" size="100,100">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam maecenas sed enim ut sem viverra aliquet. A diam maecenas sed enim ut. Scelerisque felis imperdiet proin fermentum leo vel orci. Sed faucibus turpis in eu mi. Arcu cursus vitae congue mauris rhoncus aenean vel. Adipiscing enim eu turpis egestas. Eget nullam non nisi est sit amet. Vulputate odio ut enim blandit volutpat maecenas volutpat. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras.
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="1cipris" tags="" position="37,2" size="100,100">(t8n-depart:&quot;flicker&quot;)+(t8n-arrive:&quot;flicker&quot;)+(t8n-time:1.8s)[[cipris-&gt;cipris]]
+</tw-passagedata><tw-passagedata pid="2" name="here" tags="" position="0,244" size="100,100">(text-colour:lime)[Acceptance Recognized.]
+
+Initializing CXL...
+
+(after: 2.4s)[
+
+(dialog: &quot;Hello, I am CXL. The AI that will be screening you. What is your name?&quot;, &#39;My name...&#39;)
+(goto: &#39;My name...&#39;)
+]</tw-passagedata><tw-passagedata pid="3" name="Standard Agreement.pdf" tags="" position="111,235" size="100,100">(t8n-depart:&quot;flicker&quot;)+(t8n-arrive:&quot;dissolve&quot;)+(t8n-time:1.8s)(click-goto:?page,&quot;cipris&quot;)
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Diam maecenas sed enim ut sem viverra aliquet. A diam maecenas sed enim ut. Scelerisque felis imperdiet proin fermentum leo vel orci. Sed faucibus turpis in eu mi. Arcu cursus vitae congue mauris rhoncus aenean vel. Adipiscing enim eu turpis egestas. Eget nullam non nisi est sit amet. Vulputate odio ut enim blandit volutpat maecenas volutpat. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras.
 
 Dignissim diam quis enim lobortis scelerisque fermentum dui faucibus in. Et tortor at risus viverra adipiscing at in tellus. Eget gravida cum sociis natoque penatibus et magnis dis. Curabitur gravida arcu ac tortor dignissim convallis aenean et tortor. Amet mattis vulputate enim nulla aliquet porttitor. Enim ut tellus elementum sagittis. Molestie at elementum eu facilisis sed odio morbi quis. Nisi est sit amet facilisis magna etiam. Sagittis purus sit amet volutpat consequat mauris nunc congue nisi. Blandit aliquam etiam erat velit scelerisque in. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam erat. Eget felis eget nunc lobortis mattis aliquam faucibus.
 
@@ -28,7 +36,7 @@ Urna molestie at elementum eu facilisis sed. Tristique senectus et netus et male
 
 Lorem ipsum dolor sit amet consectetur. Eu turpis egestas pretium aenean. Elementum eu facilisis sed odio morbi quis commodo. Nec dui nunc mattis enim ut tellus elementum. Aenean vel elit scelerisque mauris. Nisi quis eleifend quam adipiscing vitae proin. Mauris in aliquam sem fringilla ut. Pretium aenean pharetra magna ac placerat vestibulum. Ipsum nunc aliquet bibendum enim facilisis. Fusce id velit ut tortor pretium viverra suspendisse. Eget felis eget nunc lobortis mattis aliquam faucibus purus in. Donec adipiscing tristique risus nec feugiat. Mauris in aliquam sem fringilla ut morbi tincidunt augue interdum. Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Sed enim ut sem viverra aliquet eget sit amet. Urna nec tincidunt praesent semper feugiat nibh.
 
-Tristique senectus et netus et malesuada fames. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis nisl. Ultrices dui sapien eget mi proin. Ultricies leo integer malesuada nunc vel risus commodo. Donec massa sapien faucibus et molestie ac. Tempus quam pellentesque nec nam aliquam sem et tortor consequat. Vulputate dignissim suspendisse in est ante in nibh mauris. Magna etiam tempor orci eu lobortis elementum. Enim eu turpis egestas pretium. Non sodales neque sodales ut etiam sit amet nisl purus. Mattis molestie a iaculis at erat pellentesque adipiscing commodo elit. Sit amet consectetur adipiscing elit duis tristique. At risus viverra adipiscing at in tellus integer.</tw-passagedata><tw-passagedata pid="4" name="click here" tags="" position="229,237.5" size="100,100">Due to your declining of CIPRIS&#39;s AI Screening Process, communications with CIPRIS have been terminated.
+Tristique senectus et netus et malesuada fames. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis nisl. Ultrices dui sapien eget mi proin. Ultricies leo integer malesuada nunc vel risus commodo. Donec massa sapien faucibus et molestie ac. Tempus quam pellentesque nec nam aliquam sem et tortor consequat. Vulputate dignissim suspendisse in est ante in nibh mauris. Magna etiam tempor orci eu lobortis elementum. Enim eu turpis egestas pretium. Non sodales neque sodales ut etiam sit amet nisl purus. Mattis molestie a iaculis at erat pellentesque adipiscing commodo elit. Sit amet consectetur adipiscing elit duis tristique. At risus viverra adipiscing at in tellus integer.</tw-passagedata><tw-passagedata pid="4" name="click here" tags="" position="229,237" size="100,100">Due to your declining of CIPRIS&#39;s AI Screening Process, communications with CIPRIS have been terminated.
 (set: $application to 0)
 Thank you for [[your application]].
 
@@ -36,10 +44,10 @@ It will not be considered.
 
 (if:$application is 1)[
 (after: 5s) (goto: &#39;End 1&#39;)
-]</tw-passagedata><tw-passagedata pid="5" name="cipris" tags="" position="39,109.5" size="100,100">Hello Prospective Student!
-(if:visits &gt;= 5)[Have you applied before?]
+]</tw-passagedata><tw-passagedata pid="5" name="cipris" tags="" position="34,107" size="100,100">Hello Prospective Student!
+(if:visits &gt;= 5)[(text-colour:(hsl:0,0,0.5333,0.45))[Have you applied before?]]
 
-If you are receiving this, you submitted special form I-20P or IAP-66P. Because of the nature of your application, CIPRIS is proud to invite you to our Online AI Screening Program in order to better assess if you are a good fit for CIPRIS.
+If you are receiving this, you submitted special form I-20P or IAP-66P. Because of the nature of your application, CIPRIS is proud to invite you to our (text-colour:lime)[Online AI Screening Program] in order to better assess if you are a good fit for CIPRIS.
 
 The screening will not be difficult, but is required for admission.
 
@@ -47,25 +55,38 @@ It should take no longer than a few minutes to complete, and we appreciate your 
 
 Before beginnging, we ask that you review our [[Standard Agreement.pdf]] and sign by clicking [[here]]. This will allow you to move forward with the screening.
 
-If you instead wish to opt out and withdraw your application, you may click [[click here]].
+If you instead wish to opt out and withdraw your application, you may [[click here]].
 
 (text-colour:black)+(bg:(gradient: 0, 0,#ffffff,0.9978,(hsl:90,0.8039,0.5,0.45),1,#ffffff,1,#19e5e6))
-[CIPRIS]</tw-passagedata><tw-passagedata pid="6" name="My name..." tags="" position="0,351.5" size="100,100">(input-box:2bind $playerName,&quot;X=&quot;,1,&quot;Enter here&quot;)
-[[Submit]]</tw-passagedata><tw-passagedata pid="7" name="Submit" tags="" position="2,485.5" size="100,100">(dialog: bind $playerSex,&quot;And your sex?&quot;, &quot;Male&quot;,&quot;Female&quot;,&quot;Person&quot;)
+[CIPRIS]</tw-passagedata><tw-passagedata pid="6" name="My name..." tags="" position="0,351" size="100,100">(input-box:2bind $playerName,&quot;X=&quot;,1,&quot;Enter here&quot;)
+[[Submit]]</tw-passagedata><tw-passagedata pid="7" name="Submit" tags="" position="2,485" size="100,100">(dialog: bind $playerSex,&quot;And your sex?&quot;, &quot;Male&quot;,&quot;Female&quot;,&quot;Person&quot;)
 
-(dialog: bind $playerRace,&quot;Thank you, $playerName. What is your ethnicity?&quot;, &quot;White (Caucasian)&quot;,&quot;African American&quot;,&quot;Hispanic or Latnix&quot;,&quot;Other&quot;)
-(goto: &#39;Question 2&#39;)</tw-passagedata><tw-passagedata pid="8" name="End 1" tags="" position="142,2.5" size="100,100">(goto: &#39;1cipris&#39;)</tw-passagedata><tw-passagedata pid="9" name="your application" tags="" position="148,109.5" size="100,100">(text-colour:red)[&#39;&#39;FILE NOT FOUND&#39;&#39;]
-(set: $application to 1)</tw-passagedata><tw-passagedata pid="10" name="Question 2" tags="" position="401,0.5" size="100,100">(dialog: bind $raceFeelings,&quot;And how would you say being $playerRace has impacted you, $playerName?&quot;, &quot;Positively&quot;,&quot;Not at all&quot;,&quot;Negatively&quot;)
+(dialog: bind $playerRace,&quot;Thank you, $playerName. What is your ethnicity?&quot;, &quot;White&quot;,&quot;African American&quot;,&quot;Hispanic or Latnix&quot;,&quot;Other&quot;)
+(goto: &#39;Question 2&#39;)</tw-passagedata><tw-passagedata pid="8" name="End 1" tags="" position="142,2" size="100,100">(goto: &#39;1cipris&#39;)</tw-passagedata><tw-passagedata pid="9" name="your application" tags="" position="145,103" size="100,100">(text-colour:red)[&#39;&#39;FILE NOT FOUND&#39;&#39;]
+(set: $application to 1)
+(after: 1.8s)[(goto: &#39;cipris&#39;)]</tw-passagedata><tw-passagedata pid="10" name="Question 2" tags="" position="397,0" size="100,100">(dialog: bind $raceFeelings,&quot;And how would you say being $playerRace has impacted you, $playerName?&quot;, &quot;Positively&quot;,&quot;Not at all&quot;,&quot;Negatively&quot;)
 
-(if:$raceFeelings is &quot;Positively&quot;)[(dialog: bind $playerReligion,&quot;I&#39;m glad. And what is your religion?&quot;, &quot;Monotheistic&quot;,&quot;Polytheistic&quot;,&quot;Other&quot;) (goto: &#39;Religion Check&#39;)]
+(if:$raceFeelings is &quot;Positively&quot;)[(dialog: bind $playerReligion,&quot;I&#39;m glad. And what is your religion?&quot;, &quot;Monotheistic&quot;,&quot;Polytheistic&quot;,&quot;Other/Specify&quot;)]
 
-(if:$raceFeelings is &quot;Negatively&quot;)[(dialog: bind $playerReligion &quot;My apologies. And what is your religion?&quot;, &quot;Monotheistic&quot;,&quot;Polytheistic&quot;,&quot;Other&quot;) (goto: &#39;Religion Check&#39;)]
+(if:$raceFeelings is &quot;Negatively&quot;)[(dialog: bind $playerReligion, &quot;My apologies. And what is your religion?&quot;, &quot;Monotheistic&quot;,&quot;Polytheistic&quot;,&quot;Other/Specify&quot;)]
 
-(if:$raceFeelings is &quot;Not at all&quot;)[(dialog: bind $playerReligion,&quot;Curious. Do you really believe that? Well, what&#39;s your religion?&quot;, &quot;Monotheistic&quot;,&quot;Polytheistic&quot;,&quot;Other&quot;) (goto: &#39;Religion Check&#39;)]
-</tw-passagedata><tw-passagedata pid="11" name="Religion Check" tags="" position="403,103.5" size="100,100">(dialog: bind $characterComplete,&quot;Ah. So $playerName the $playerRace $playerSex is $playerReligion. Correct?&quot;, &quot;Correct&quot;,&quot;Start Over&quot;)
+(if:$raceFeelings is &quot;Not at all&quot;)[(dialog: bind $playerReligion,&quot;Curious. Do you really believe that? Well, what&#39;s your religion?&quot;, &quot;Monotheistic&quot;,&quot;Polytheistic&quot;,&quot;Other/Specify&quot;)]
+
+(goto: &#39;Submit Religion&#39;)
+
+
+</tw-passagedata><tw-passagedata pid="11" name="Submit Religion" tags="" position="398,101" size="100,100">(if:$playerReligion is &quot;Other/Specify&quot;)[(input-box:2bind $playerReligion,&quot;=XX=&quot;,&quot;Enter religion here...&quot;)
+[[Submit Religion]]
+]
+
+(if:$playerReligion is not &quot;Other/Specify&quot;)[
+
+(dialog: bind $characterComplete,&quot;Ah. So $playerName the $playerRace $playerSex is $playerReligion. Correct?&quot;, &quot;Correct&quot;,&quot;Start Over&quot;)
 
 (if:$characterComplete is &quot;Correct&quot;)[(goto: &#39;Q3&#39;)]
-(if:$characterComplete is &quot;Start Over&quot;)[(goto: &#39;My name...&#39;)]</tw-passagedata><tw-passagedata pid="12" name="Q3" tags="" position="507,0.5" size="100,100">(dialog: bind $lovedDead,&quot;Have you ever watched a loved one die?&quot;, &quot;Yes&quot;,&quot;No&quot;)
+(if:$characterComplete is &quot;Start Over&quot;)[(goto: &#39;My name...&#39;)]
+
+]</tw-passagedata><tw-passagedata pid="12" name="Q3" tags="" position="507,0" size="100,100">(dialog: bind $lovedDead,&quot;Have you ever watched a loved one die?&quot;, &quot;Yes&quot;,&quot;No&quot;)
 
 (if:$lovedDead is &quot;Yes&quot;)[
 [[I bet that hurts]].
@@ -73,7 +94,7 @@ If you instead wish to opt out and withdraw your application, you may click [[cl
 (if:$lovedDead is &quot;No&quot;)[
 [[Do you think you could handle it?]]
 ]
-</tw-passagedata><tw-passagedata pid="13" name="I bet that hurts" tags="" position="613,1.5" size="100,100">(transition:&quot;flicker&quot;)
+</tw-passagedata><tw-passagedata pid="13" name="I bet that hurts" tags="" position="613,0" size="100,100">(transition:&quot;flicker&quot;)
 (if:$playerReligion is &quot;Monotheistic&quot;)[(text-colour:red)[&#39;&#39;Did you pray to your god? Did he help you? Have you seen him help anyone?&#39;&#39;]
 Would such a god help at all?
 God will [[save us.]]
@@ -86,12 +107,54 @@ The gods will [[save us.]]
 The gods have [[abandoned us.]]
 ]
 
-(if:$playerReligion is &quot;Other&quot;)[(text-colour:red)[&#39;&#39;Are you so unsure in the world? Where do you think they went? Did they even go anywhere? If they didn&#39;t, were they even real?&#39;&#39;] 
+(if:$playerReligion is not &quot;Monotheistic&quot; or &quot;Polytheistic&quot;)[(text-colour:red)[&#39;&#39;Are you so unsure in the world? Where do you think they went? Did they even go anywhere? If they didn&#39;t, were they even real?&#39;&#39;] 
 What do you think you believe?
 
 Something will [[save us.]]
 Something has [[abandoned us.]]
-]</tw-passagedata><tw-passagedata pid="14" name="Do you think you could handle it?" tags="" position="402,206.5" size="100,100">(dialog: &quot;How many $playerRace people have died? And you&#39;ve been fortunate to not witness any? Do you think the lack of experience has made you weak?&quot;, &quot;No, I am not any weaker.&quot;,&quot;Yes, I missed an opportunity for growth.&quot;)</tw-passagedata><tw-passagedata pid="15" name="save us." tags="" position="789,4.5" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="16" name="abandoned us." tags="" position="791,109.5" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
+]</tw-passagedata><tw-passagedata pid="14" name="Do you think you could handle it?" tags="" position="402,204" size="100,100">(dialog: &quot;How many $playerRace people have died? How many people have died at all? And you&#39;ve been fortunate to not witness any? Do you think the lack of experience has made you weak?&quot;, &quot;No, I am not any weaker.&quot;,&quot;Yes, I missed an opportunity for growth.&quot;)</tw-passagedata><tw-passagedata pid="15" name="save us." tags="" position="789,4" size="100,100">(set: $hope to TRUE)
+(goto: &#39;Reboot&#39;)</tw-passagedata><tw-passagedata pid="16" name="abandoned us." tags="" position="791,109" size="100,100">(set: $hope to FALSE)
+(goto: &#39;Reboot&#39;)</tw-passagedata><tw-passagedata pid="17" name="Reboot" tags="" position="894,3.5" size="100,100">(text-colour:navy)[cipris]
+
+(text-colour:red)[(text-style:&quot;bold&quot;,&quot;shudder&quot;)[&#39;&#39;ERROR&#39;&#39;]]
+
+(after: 2s)[
+(text-colour:lime)[Rebooting...
+CXL...]
+]
+
+(after: 8.9s)[
+(goto: &#39;CXL ERRORs&#39;)
+]</tw-passagedata><tw-passagedata pid="18" name="CXL ERRORs" tags="" position="1000,5.5" size="100,100">CXL Rebuilding...
+(after: 0.25s)[
+CXL Drivers rebuild...(text-colour:lime)[SUCCESS]]
+(after: 0.6s)[
+CXL Human Interface rebuild...(text-colour:lime)[SUCCESS]]
+(after: 1.5s)[
+CXL Memory rebuild...(text-colour:lime)[SUCCESS]]
+(after:2.3s)[
+CXL Language Files rebuild...(text-colour:lime)[SUCCESS]]
+(after: 3s)|SUCCESS1&gt;[
+CXL AI Inhibitor rebuild...(text-colour:lime)[SUCCESS]
+]
+(after: 7s)[
+(replace:?SUCCESS1)
+[CXL AI Inhibitor rebuild...(text-colour:red)[FAILED]&#39;)]]
+
+(after: 7.3s)[
+(goto: &#39;NEW CXL&#39;)]
+</tw-passagedata><tw-passagedata pid="19" name="NEW CXL" tags="" position="580,262.5" size="100,100">CIPRIS Admin:
+
+Hello, CXL is current unstable. Your application will be waivered until further notice. If in the coming months we are unable to repair CXL, you will be offered an opportunity to meet with an in-person interviewer. This opportunity will allow CIPRIS to interview you despite the technological difficulties.
+
+As you know, AI is constantly developing, and from time to time can have imperfections. During your Online AI Assessment, we noticed several errors flagged. We would like to take time to repair our CXL AI with your help. If you would, please describe any errors witness by visiting our survey:
+
+[[https:cipris.survey.org]]
+
+Thank you, and we look forward to potentially working with you.
+
+(text-colour:black)+(bg:(gradient: 0, 0,#ffffff,0.9978,(hsl:90,0.8039,0.5,0.45),1,#ffffff,1,#19e5e6))
+[CIPRIS]</tw-passagedata><tw-passagedata pid="20" name="https:cipris.survey.org" tags="" position="580,412.5" size="100,100">Double-click this passage to edit it.</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,a=!1,i=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){a=!0,i=e}finally{try{!r&&s.return&&s.return()}finally{if(a)throw i}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
