--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ tw-sidebar tw-icon.undo {
 display: none;
  
 
+}
+tw-sidebar {
+  
+  display: none;
+  
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="1cipris" tags="startup" position="32,0" size="100,100">{
 &lt;!-- Set autosave variables --&gt;
 (set: $_version to &quot;1.0.2&quot;)
